--- a/blocks/page.css
+++ b/blocks/page.css
@@ -2,9 +2,15 @@
   font-family: "Poppins", Arial, sans-serif;
   font-weight: 500;
   font-style: normal;
-  padding: 0;
+  padding: 0 0 60px 0;
   margin: 0;
+  color: #212121;
   background-color: #fcf5e5;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  box-sizing: border-box;
 }
 
 .page__header {
@@ -12,17 +18,23 @@
 }
 
 .page__content {
-  max-width: 1280px;
-  padding: 0 40px 60px 40px;
+  max-width: 1320px;
+  padding: 0 20px;
   margin: auto;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 .page__main {
+  margin-bottom: 60px;
 }
 
 .page__profile {
   margin-bottom: 20px;
 }
 
-.page__footer {
+@media screen and (max-width: 453px) {
+  .page__content {
+    padding: 0 16px;
+  }
 }
