--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -15,27 +15,36 @@
 .profile__info {
   display: flex;
   flex-direction: column;
+  max-width: 420px;
 }
 
 .profile__name {
   margin: 0 0 12px 0;
   font-weight: 500;
   font-size: 32px;
-  line-height: 32px;
+  line-height: 1;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
+  overflow: hidden;
 }
 
 .profile__description {
   margin: 0;
   font-weight: 500;
   font-size: 16px;
-  line-height: 16px;
+  line-height: 1;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
+  overflow: hidden;
 }
 
 .profile__edit-button {
   padding: 0;
   margin-top: auto;
   display: flex;
-  gap: 6px;
+  gap: 8px;
   flex-direction: row;
   background: transparent;
   align-items: center;
@@ -43,6 +52,13 @@
   width: 108px;
   border: none;
   cursor: pointer;
+  color: #212121;
+  opacity: 0.7;
+  transition: opacity 0.2s ease-out;
+}
+
+.profile__edit-button:hover {
+  opacity: 1;
 }
 
 .profile__pencil-icon {
@@ -56,6 +72,7 @@
 .profile__edit-button-text {
   margin: 0;
   font-family: "Poppins", Arial, sans-serif;
+  font-weight: 500;
   font-size: 16px;
 }
 
@@ -74,6 +91,11 @@
   border-radius: 8px;
   width: 157px;
   height: 52px;
+  transition: opacity 0.2s ease-out;
+}
+
+.profile__add-button:hover {
+  opacity: 0.8;
 }
 
 .profile__plus-icon {
@@ -86,7 +108,44 @@
 
 .profile__add-button-text {
   margin: 0;
-  color: #fff;
+  color: #fcf5e5;
   font-family: "Poppins", Arial, sans-serif;
+  font-weight: 500;
   font-size: 16px;
+}
+
+@media screen and (max-width: 886px) {
+  .profile {
+    flex-direction: column;
+    align-items: center;
+  }
+  .profile__image {
+    margin: 0 auto 12px auto;
+    width: 25vw;
+  }
+  .profile__name {
+    margin-bottom: 6px;
+    font-size: 26px;
+    text-align: center;
+  }
+  .profile__description {
+    margin: 0 auto 32px auto;
+    text-align: center;
+  }
+  .profile__edit-button {
+    margin: 0 auto 20px auto;
+  }
+  .profile__add-button {
+    margin: auto;
+    width: 288px;
+  }
+}
+
+@media screen and (max-width: 453px) {
+  .profile__image {
+    width: 80px;
+  }
+  .profile__name {
+    font-size: 20px;
+  }
 }
