--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -3,6 +3,7 @@
   flex-direction: row;
   padding-bottom: 20px;
   border-bottom: 1px solid rgba(33, 33, 33, 0.4);
+  transition: 0.2s linear;
 }
 
 .profile__image {
@@ -34,6 +35,7 @@
   font-weight: 500;
   font-size: 16px;
   line-height: 1;
+  opacity: 0.7;
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 3;
@@ -62,9 +64,6 @@
 }
 
 .profile__pencil-icon {
-  background-image: url("../images/pencil-icon.svg");
-  background-repeat: no-repeat;
-  background-position: left;
   width: 16px;
   height: 16px;
 }
@@ -99,9 +98,6 @@
 }
 
 .profile__plus-icon {
-  background-image: url("../images/plus-icon.svg");
-  background-repeat: no-repeat;
-  background-position: left;
   width: 16px;
   height: 16px;
 }
