--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,5 +1,5 @@
 .header {
-  background-color: #fff;
+  background-color: rgba(255, 255, 255, 0.8);
   min-height: 46px;
   width: 100%;
   background-image: url("../images/spots-logo.svg");
